attempt #3 at fixing scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -118,5 +118,6 @@ h1 {
 
 foreignObject {
     position: relative;
+    z-index: 2;
     -webkit-overflow-scrolling: touch;
 }
